Fixes and updates

--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -5,7 +5,19 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 32
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging = true
+        }
+    }
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\fourr\\.android\\qcxr.keystore')
+            storePassword '***REMOVED***'
+            keyAlias 'qcxr'
+            keyPassword '***REMOVED***'
+        }
+    }
     buildToolsVersion '30.0.3'
 
     compileOptions {
@@ -18,11 +30,13 @@ android {
     }
     
     defaultConfig {
+        compileSdkVersion = 32
         minSdkVersion 29
         targetSdkVersion 32
         applicationId 'com.qcxr.qcxr'
         ndk {
             abiFilters 'arm64-v8a'
+            stl "c++_shared"
         }
         versionCode 15
         versionName '5.0.0'
@@ -55,10 +69,10 @@ android {
 
     bundle {
         language {
-            enableSplit = false
+            enableSplit = true
         }
         density {
-            enableSplit = false
+            enableSplit = true
         }
         abi {
             enableSplit = true
