--- a/unityLibrary/build.gradle
+++ b/unityLibrary/build.gradle
@@ -30,6 +30,7 @@ android {
         targetSdkVersion 32
         ndk {
             abiFilters 'arm64-v8a'
+            stl "c++_shared"
         }
         versionCode 15
         versionName '5.0.0'
