--- a/unityLibrary/src/main/assets/bin/Data/boot.config
+++ b/unityLibrary/src/main/assets/bin/Data/boot.config
@@ -1,10 +1,12 @@
-player-connection-mode=Listen
-player-connection-guid=1780843986
+player-connection-mode=Connect
+player-connection-guid=1186429383
 player-connection-debug=0
 player-connection-project-name=QuestCraft
-player-connection-ip=172.26.128.1
-player-connection-ip=172.24.32.1
-player-connection-ip=192.168.4.234
+player-connection-wait-timeout=-1
+player-connection-ip=127.0.0.1:34998
+player-connection-ip=192.168.69.152
+player-connection-ip=172.23.48.1
+profiler-enable=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
