--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
     implementation project(':wrapper:unityLibrary')
+    implementation("com.github.Mathias-Boulay:android_gamepad_remapper:2.0.3")
 }
 
 android {
@@ -44,8 +45,8 @@ android {
             abiFilters 'arm64-v8a'
             stl "c++_shared"
         }
-        versionCode 16
-        versionName '5.0.0'
+        versionCode 22
+        versionName '5.1.0-RC3.1'
     }
 
     aaptOptions {
