--- a/unityLibrary/build.gradle
+++ b/unityLibrary/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation("com.google.guava:guava:31.0.1-jre")
@@ -32,8 +33,8 @@ android {
             abiFilters 'arm64-v8a'
             stl "c++_shared"
         }
-        versionCode 15
-        versionName '5.0.0'
+        versionCode 21
+        versionName '5.1.0-rc3'
         consumerProguardFiles 'proguard-unity.txt'
     }
 
@@ -60,7 +61,7 @@ def getSdkDir() {
     String dir
     try {
         dir = local.load(new FileInputStream("${rootDir}/local.properties")).getProperty('sdk.dir')
-    } catch(FileNotFoundException ex) {
+    } catch(NullPointerException ex) {
         dir = "${System.getenv().ANDROID_SDK_ROOT}"
     }
     return dir
